--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -110,7 +110,7 @@ Material="\"Object\" "
 MaterialInterface="\"Object\" "
 Texture2D="\"Object\" "
 Texture="\"Object\" "
-StreamableRenderAsset="\"Object\" "
+StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 MaterialExpressionConstant="\"Object\" "
 MaterialExpression="\"Object\" "
 MaterialExpressionScalarParameter="\"Object\" "
@@ -365,7 +365,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/Assets/Aziz/Assets
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -2049,6 +2049,7 @@ RecentsFiles=C:/UE5/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/in
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
@@ -2161,13 +2162,15 @@ BrushComponent=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Len
 StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/Aziz/Assets/4dbbf9e7afb8f20859dd4b7af89e6fae--wood-material-texture-texture-floor.4dbbf9e7afb8f20859dd4b7af89e6fae--wood-material-texture-texture-floor;
+RecentlyPlaced=/Game/Assets/Aziz/Assets/31e51c3331f6ef04c8a6d2fdb440a773.31e51c3331f6ef04c8a6d2fdb440a773;
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Assets/Aziz/Assets/Material.Material;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/Lamp/Lamp.Lamp;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/FlowerLamp/FlowerLamp_low.FlowerLamp_low;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_SmallDrawer.SM_SmallDrawer;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/Bookshelf/Books_low.Books_low;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/MM_Glass.MM_Glass;
-RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_SunGuard.SM_SunGuard;
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_19
 RecentlyPlaced=/Game/Assets/Aziz/Assets/Material_001.Material_001;
@@ -2179,8 +2182,6 @@ RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_Chandelier.SM_Chandelier;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_Curtains.SM_Curtains;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_Table.SM_Table;
 RecentlyPlaced=/Game/Assets/Charlotte/Cupboard.Cupboard;
-RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_1mSofa.SM_1mSofa;
-RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_2mSofa.SM_2mSofa;
 None=======
 
 [FBX_Import_UI_Option_FbxImportUI]
@@ -2299,26 +2300,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Living_Room
-MRUItem1=/Game/Assets/Aziz/Assets/MM_Glass
-MRUItem2=/Game/Assets/Aziz/Assets/RockingChair/RockingChair_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem3=/Game/Assets/Aziz/Assets/Material
-MRUItem4=/Game/Assets/Aziz/Assets/Material_001
-MRUItem5=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem6=/Game/Assets/Tashan/staircase/stars_Cube_004
-MRUItem7=/Game/Assets/Tashan/staircase/stars_Cube_002
-MRUItem8=/Game/Assets/Tashan/staircase/stars_Cube
-MRUItem9=/Game/Assets/Tashan/staircase/stars_BezierCurve_001
-MRUItem10=/Game/M4/Tashan/Assets/blockout/room_v5_Plane_006
-MRUItem11=/Game/attic_migration
-MRUItem12=/Game/Assets/Aziz/A_plank
-MRUItem13=/Game/Assets/Charlotte/Assets/Doors/Door_Group_SM_Door_04_low_Blueprint
-MRUItem14=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01_Inst
-MRUItem15=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01
-MRUItem16=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_01_BaseColor
-MRUItem17=/Game/M4/Tashan/Assets/mat_blend_Inst2
-MRUItem18=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01_Inst
-MRUItem19=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01
+MRUItem0=/Game/Assets/Aziz/Assets/31e51c3331f6ef04c8a6d2fdb440a773_Mat
+MRUItem1=/Game/Assets/Aziz/Assets/Fireplace/SM_Fireplace
+MRUItem2=/Game/Living_Room
+MRUItem3=/Game/Assets/Aziz/Assets/MM_Glass
+MRUItem4=/Game/Assets/Aziz/Assets/RockingChair/RockingChair_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem5=/Game/Assets/Aziz/Assets/Material
+MRUItem6=/Game/Assets/Aziz/Assets/Material_001
+MRUItem7=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem8=/Game/Assets/Tashan/staircase/stars_Cube_004
+MRUItem9=/Game/Assets/Tashan/staircase/stars_Cube_002
+MRUItem10=/Game/Assets/Tashan/staircase/stars_Cube
+MRUItem11=/Game/Assets/Tashan/staircase/stars_BezierCurve_001
+MRUItem12=/Game/M4/Tashan/Assets/blockout/room_v5_Plane_006
+MRUItem13=/Game/attic_migration
+MRUItem14=/Game/Assets/Aziz/A_plank
+MRUItem15=/Game/Assets/Charlotte/Assets/Doors/Door_Group_SM_Door_04_low_Blueprint
+MRUItem16=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01_Inst
+MRUItem17=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01
+MRUItem18=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_01_BaseColor
+MRUItem19=/Game/M4/Tashan/Assets/mat_blend_Inst2
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
@@ -2403,6 +2404,8 @@ None=======
 /Game/Assets/Aziz/Assets/Material_001.Material_001=1
 /Game/Assets/Aziz/Assets/Material.Material=1
 /Game/Assets/Aziz/Assets/MM_Glass.MM_Glass=1
+/Game/Assets/Aziz/Assets/Fireplace/SM_Fireplace.SM_Fireplace=1
+/Game/Assets/Aziz/Assets/31e51c3331f6ef04c8a6d2fdb440a773_Mat.31e51c3331f6ef04c8a6d2fdb440a773_Mat=1
 
 [MaterialEditor]
 PrimType=1
