--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -103,7 +103,7 @@ LastLevel=/Game/Living_Room
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 FbxImportUI="\"Object\" "
 PreviewMaterial="\"Object\" "
 Material="\"Object\" "
@@ -2162,6 +2162,7 @@ BrushComponent=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Len
 StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/Aziz/Assets/floral-seamless-pattern-flower-background-floral-seamless-texture-with-flowers-flourish-tiled-white-spring-wallpaper-vector.floral-seamless-pattern-flower-background-floral-seamless-texture-with-flowers-flourish-tiled-white-spring-wallpaper-vector;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/4dbbf9e7afb8f20859dd4b7af89e6fae--wood-material-texture-texture-floor.4dbbf9e7afb8f20859dd4b7af89e6fae--wood-material-texture-texture-floor;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/31e51c3331f6ef04c8a6d2fdb440a773.31e51c3331f6ef04c8a6d2fdb440a773;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
@@ -2181,7 +2182,6 @@ RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_WindowFrame.SM_WindowFrame;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_Chandelier.SM_Chandelier;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_Curtains.SM_Curtains;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_Table.SM_Table;
-RecentlyPlaced=/Game/Assets/Charlotte/Cupboard.Cupboard;
 None=======
 
 [FBX_Import_UI_Option_FbxImportUI]
@@ -2300,26 +2300,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Aziz/Assets/31e51c3331f6ef04c8a6d2fdb440a773_Mat
-MRUItem1=/Game/Assets/Aziz/Assets/Fireplace/SM_Fireplace
-MRUItem2=/Game/Living_Room
-MRUItem3=/Game/Assets/Aziz/Assets/MM_Glass
-MRUItem4=/Game/Assets/Aziz/Assets/RockingChair/RockingChair_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem5=/Game/Assets/Aziz/Assets/Material
-MRUItem6=/Game/Assets/Aziz/Assets/Material_001
-MRUItem7=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem8=/Game/Assets/Tashan/staircase/stars_Cube_004
-MRUItem9=/Game/Assets/Tashan/staircase/stars_Cube_002
-MRUItem10=/Game/Assets/Tashan/staircase/stars_Cube
-MRUItem11=/Game/Assets/Tashan/staircase/stars_BezierCurve_001
-MRUItem12=/Game/M4/Tashan/Assets/blockout/room_v5_Plane_006
-MRUItem13=/Game/attic_migration
-MRUItem14=/Game/Assets/Aziz/A_plank
-MRUItem15=/Game/Assets/Charlotte/Assets/Doors/Door_Group_SM_Door_04_low_Blueprint
-MRUItem16=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01_Inst
-MRUItem17=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01
-MRUItem18=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_01_BaseColor
-MRUItem19=/Game/M4/Tashan/Assets/mat_blend_Inst2
+MRUItem0=/Game/Assets/Aziz/Assets/SM_WallTile2
+MRUItem1=/Game/Assets/Aziz/Assets/SM_WindowTile
+MRUItem2=/Game/Assets/Aziz/Assets/SM_WallTile
+MRUItem3=/Game/Assets/Aziz/Assets/31e51c3331f6ef04c8a6d2fdb440a773_Mat
+MRUItem4=/Game/Assets/Aziz/Assets/Fireplace/SM_Fireplace
+MRUItem5=/Game/Living_Room
+MRUItem6=/Game/Assets/Aziz/Assets/MM_Glass
+MRUItem7=/Game/Assets/Aziz/Assets/RockingChair/RockingChair_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem8=/Game/Assets/Aziz/Assets/Material
+MRUItem9=/Game/Assets/Aziz/Assets/Material_001
+MRUItem10=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem11=/Game/Assets/Tashan/staircase/stars_Cube_004
+MRUItem12=/Game/Assets/Tashan/staircase/stars_Cube_002
+MRUItem13=/Game/Assets/Tashan/staircase/stars_Cube
+MRUItem14=/Game/Assets/Tashan/staircase/stars_BezierCurve_001
+MRUItem15=/Game/M4/Tashan/Assets/blockout/room_v5_Plane_006
+MRUItem16=/Game/attic_migration
+MRUItem17=/Game/Assets/Aziz/A_plank
+MRUItem18=/Game/Assets/Charlotte/Assets/Doors/Door_Group_SM_Door_04_low_Blueprint
+MRUItem19=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01_Inst
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
