--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -378,7 +378,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Assets/Aziz/Assets
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -2369,10 +2369,10 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Aziz/Assets/SM_TopSegment
-MRUItem1=/Game/Megascans/Surfaces/Varnished_Wooden_Floor_udukafko/MI_Varnished_Wooden_Floor_udukafko_1K
-MRUItem2=/Game/Assets/Aziz/Assets/SM_WallTile3
-MRUItem3=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Assets/Aziz/Assets/SM_TopSegment
+MRUItem2=/Game/Megascans/Surfaces/Varnished_Wooden_Floor_udukafko/MI_Varnished_Wooden_Floor_udukafko_1K
+MRUItem3=/Game/Assets/Aziz/Assets/SM_WallTile3
 MRUItem4=/Engine/BasicShapes/BasicShapeMaterial
 MRUItem5=/Game/Assets/Tashan/stairs_wallpaper_2
 MRUItem6=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
