--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -276,7 +276,7 @@ MaterialFunction="\"Object\" "
 MaterialFunctionInterface="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -378,7 +378,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/Assets/Aziz/Assets
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
