--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -103,14 +103,14 @@ LastLevel=/Game/Living_Room
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
 WorldPartitionRuntimeHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
-Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+Object="\"Object\" "
 FbxImportUI="\"Object\" "
 PreviewMaterial="\"Object\" "
 Material="\"Object\" "
 MaterialInterface="\"Object\" "
 Texture2D="\"Object\" "
 Texture="\"Object\" "
-StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+StreamableRenderAsset="\"Object\" "
 MaterialExpressionConstant="\"Object\" "
 MaterialExpression="\"Object\" "
 MaterialExpressionScalarParameter="\"Object\" "
@@ -250,8 +250,8 @@ StaticMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BrushComponent="\"Object\" "
 BoxComponent="\"Object\" "
 ShapeComponent="\"Object\" "
@@ -1049,6 +1049,7 @@ MaterialExpressionFunctionOutput.MaterialExpression=True
 MaterialFunction.MaterialFunction=True
 MaterialFunction.Preview=True
 MaterialFunction.Thumbnail=True
+Texture2D.Interchange =True
 
 [RootWindow]
 ScreenPosition=X=484.000 Y=296.000
@@ -2223,14 +2224,16 @@ TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDet
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.File Path,
-PostProcessVolume=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
-BrushComponent=
-StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
+PostProcessVolume=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens|Mobile Depth of Field,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Color Grading.Color Grading|Temperature,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Global Illumination.Global Illumination|Ray Tracing Global Illumination,PostProcessVolume.Reflections.Reflections|Lumen Reflections,PostProcessVolume.Reflections.Reflections|Screen Space Reflections,PostProcessVolume.Reflections.Reflections|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Rendering Features.Rendering Features|Translucency,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Translucency,PostProcessVolume.Rendering Features.Rendering Features|PathTracing,
+BrushComponent=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens|Mobile Depth of Field,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Color Grading.Color Grading|Temperature,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Global Illumination.Global Illumination|Ray Tracing Global Illumination,PostProcessVolume.Reflections.Reflections|Lumen Reflections,PostProcessVolume.Reflections.Reflections|Screen Space Reflections,PostProcessVolume.Reflections.Reflections|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Rendering Features.Rendering Features|Translucency,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Translucency,PostProcessVolume.Rendering Features.Rendering Features|PathTracing,
+StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens|Mobile Depth of Field,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Color Grading.Color Grading|Temperature,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Global Illumination.Global Illumination|Ray Tracing Global Illumination,PostProcessVolume.Reflections.Reflections|Lumen Reflections,PostProcessVolume.Reflections.Reflections|Screen Space Reflections,PostProcessVolume.Reflections.Reflections|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Rendering Features.Rendering Features|Translucency,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Translucency,PostProcessVolume.Rendering Features.Rendering Features|PathTracing,
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails,
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails,
 TriggerVolume=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_WindowFrameFloor.SM_WindowFrameFloor;
+RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_WindowFrameRoof.SM_WindowFrameRoof;
 RecentlyPlaced=/Game/Megascans/Surfaces/Varnished_Wooden_Floor_udukafko/MI_Varnished_Wooden_Floor_udukafko_1K.MI_Varnished_Wooden_Floor_udukafko_1K;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_WallTile3.SM_WallTile3;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_TopSegment.SM_TopSegment;
@@ -2249,8 +2252,6 @@ RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Damaged_Book_vf1fddhiw/S_Old_Damage
 RecentlyPlaced=/Game/Assets/Aziz/Assets/FlowerLamp/FlowerLamp_low.FlowerLamp_low;
 RecentlyPlaced=/Game/Assets/Tashan/Decals/mm_decal_splash.mm_decal_splash;
 RecentlyPlaced=/Game/Assets/Tashan/Decals/mm_decal_leak1_2.mm_decal_leak1_2;
-RecentlyPlaced=/Game/Assets/Tashan/Decals/mm_decal_leak1.mm_decal_leak1;
-RecentlyPlaced=/Game/Assets/Tashan/Decals/mat_decal.mat_decal;
 None=======
 
 [FBX_Import_UI_Option_FbxImportUI]
@@ -2369,26 +2370,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Living_Room
-MRUItem1=/Game/Assets/Aziz/Assets/SM_TopSegment
-MRUItem2=/Game/Megascans/Surfaces/Varnished_Wooden_Floor_udukafko/MI_Varnished_Wooden_Floor_udukafko_1K
-MRUItem3=/Game/Assets/Aziz/Assets/SM_WallTile3
-MRUItem4=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem5=/Game/Assets/Tashan/stairs_wallpaper_2
-MRUItem6=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
-MRUItem7=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend
-MRUItem8=/Game/Assets/Tashan/stairs_wallpaper
-MRUItem9=/Game/Assets/Tashan/mm_master
-MRUItem10=/Game/M4/Tashan/Assets/MF_Wallpaper
-MRUItem11=/Game/M4/Tashan/Assets/mat_blend
-MRUItem12=/Game/M4/Tashan/Assets/stairs_wallpaper
-MRUItem13=/Game/Assets/Tashan/Decals/mm_decal_leak1_2
-MRUItem14=/Game/Assets/Tashan/Decals/mm_decal_leak1
-MRUItem15=/Game/Assets/Tashan/Decals/mm_decal
-MRUItem16=/Game/Assets/Tashan/Decals/mm_decal_splash2
-MRUItem17=/Game/Assets/Tashan/Decals/TexturePlane_DefaultMaterial_Normal
-MRUItem18=/Game/Assets/Tashan/Decals/mm_decal_leak1_4
-MRUItem19=/Game/Assets/Tashan/Decals/mm_decal_leak1_3
+MRUItem0=/Game/Assets/Aziz/Assets/Bookshelf/Books_low_LowPoly3_OcclusionRoughnessMetallic
+MRUItem1=/Game/Living_Room
+MRUItem2=/Game/Assets/Aziz/Assets/SM_TopSegment
+MRUItem3=/Game/Megascans/Surfaces/Varnished_Wooden_Floor_udukafko/MI_Varnished_Wooden_Floor_udukafko_1K
+MRUItem4=/Game/Assets/Aziz/Assets/SM_WallTile3
+MRUItem5=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem6=/Game/Assets/Tashan/stairs_wallpaper_2
+MRUItem7=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
+MRUItem8=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend
+MRUItem9=/Game/Assets/Tashan/stairs_wallpaper
+MRUItem10=/Game/Assets/Tashan/mm_master
+MRUItem11=/Game/M4/Tashan/Assets/MF_Wallpaper
+MRUItem12=/Game/M4/Tashan/Assets/mat_blend
+MRUItem13=/Game/M4/Tashan/Assets/stairs_wallpaper
+MRUItem14=/Game/Assets/Tashan/Decals/mm_decal_leak1_2
+MRUItem15=/Game/Assets/Tashan/Decals/mm_decal_leak1
+MRUItem16=/Game/Assets/Tashan/Decals/mm_decal
+MRUItem17=/Game/Assets/Tashan/Decals/mm_decal_splash2
+MRUItem18=/Game/Assets/Tashan/Decals/TexturePlane_DefaultMaterial_Normal
+MRUItem19=/Game/Assets/Tashan/Decals/mm_decal_leak1_4
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
