--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -2232,6 +2232,8 @@ WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,W
 TriggerVolume=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_RoofSupport.SM_RoofSupport;
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_WindowFrameFloor.SM_WindowFrameFloor;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_WindowFrameRoof.SM_WindowFrameRoof;
 RecentlyPlaced=/Game/Megascans/Surfaces/Varnished_Wooden_Floor_udukafko/MI_Varnished_Wooden_Floor_udukafko_1K.MI_Varnished_Wooden_Floor_udukafko_1K;
@@ -2250,8 +2252,6 @@ RecentlyPlaced=/Game/Megascans/3D_Assets/Floral_Hardcover_Book_vf5kfemjw/S_Flora
 RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Blue_Book_vf0magphw/S_Old_Blue_Book_vf0magphw_lod3_Var1.S_Old_Blue_Book_vf0magphw_lod3_Var1;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Damaged_Book_vf1fddhiw/S_Old_Damaged_Book_vf1fddhiw_lod3_Var1.S_Old_Damaged_Book_vf1fddhiw_lod3_Var1;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/FlowerLamp/FlowerLamp_low.FlowerLamp_low;
-RecentlyPlaced=/Game/Assets/Tashan/Decals/mm_decal_splash.mm_decal_splash;
-RecentlyPlaced=/Game/Assets/Tashan/Decals/mm_decal_leak1_2.mm_decal_leak1_2;
 None=======
 
 [FBX_Import_UI_Option_FbxImportUI]
