--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -110,7 +110,7 @@ Material="\"Object\" "
 MaterialInterface="\"Object\" "
 Texture2D="\"Object\" "
 Texture="\"Object\" "
-StreamableRenderAsset="\"Object\" "
+StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 MaterialExpressionConstant="\"Object\" "
 MaterialExpression="\"Object\" "
 MaterialExpressionScalarParameter="\"Object\" "
@@ -2232,6 +2232,7 @@ WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,W
 TriggerVolume=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_Yggdrasil.SM_Yggdrasil;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_RoofSupport.SM_RoofSupport;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_WindowFrameFloor.SM_WindowFrameFloor;
@@ -2251,7 +2252,6 @@ RecentlyPlaced=/Game/Assets/Aziz/Assets/DoorWay/ArchDoorFrameLarge.ArchDoorFrame
 RecentlyPlaced=/Game/Megascans/3D_Assets/Floral_Hardcover_Book_vf5kfemjw/S_Floral_Hardcover_Book_vf5kfemjw_lod3_Var1.S_Floral_Hardcover_Book_vf5kfemjw_lod3_Var1;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Blue_Book_vf0magphw/S_Old_Blue_Book_vf0magphw_lod3_Var1.S_Old_Blue_Book_vf0magphw_lod3_Var1;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Damaged_Book_vf1fddhiw/S_Old_Damaged_Book_vf1fddhiw_lod3_Var1.S_Old_Damaged_Book_vf1fddhiw_lod3_Var1;
-RecentlyPlaced=/Game/Assets/Aziz/Assets/FlowerLamp/FlowerLamp_low.FlowerLamp_low;
 None=======
 
 [FBX_Import_UI_Option_FbxImportUI]
@@ -2370,26 +2370,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Aziz/Assets/Bookshelf/Books_low_LowPoly3_OcclusionRoughnessMetallic
-MRUItem1=/Game/Living_Room
-MRUItem2=/Game/Assets/Aziz/Assets/SM_TopSegment
-MRUItem3=/Game/Megascans/Surfaces/Varnished_Wooden_Floor_udukafko/MI_Varnished_Wooden_Floor_udukafko_1K
-MRUItem4=/Game/Assets/Aziz/Assets/SM_WallTile3
-MRUItem5=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem6=/Game/Assets/Tashan/stairs_wallpaper_2
-MRUItem7=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
-MRUItem8=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend
-MRUItem9=/Game/Assets/Tashan/stairs_wallpaper
-MRUItem10=/Game/Assets/Tashan/mm_master
-MRUItem11=/Game/M4/Tashan/Assets/MF_Wallpaper
-MRUItem12=/Game/M4/Tashan/Assets/mat_blend
-MRUItem13=/Game/M4/Tashan/Assets/stairs_wallpaper
-MRUItem14=/Game/Assets/Tashan/Decals/mm_decal_leak1_2
-MRUItem15=/Game/Assets/Tashan/Decals/mm_decal_leak1
-MRUItem16=/Game/Assets/Tashan/Decals/mm_decal
-MRUItem17=/Game/Assets/Tashan/Decals/mm_decal_splash2
-MRUItem18=/Game/Assets/Tashan/Decals/TexturePlane_DefaultMaterial_Normal
-MRUItem19=/Game/Assets/Tashan/Decals/mm_decal_leak1_4
+MRUItem0=/Game/Assets/Aziz/Assets/SM_RoofSupport
+MRUItem1=/Game/Assets/Aziz/Assets/Bookshelf/Books_low_LowPoly3_OcclusionRoughnessMetallic
+MRUItem2=/Game/Living_Room
+MRUItem3=/Game/Assets/Aziz/Assets/SM_TopSegment
+MRUItem4=/Game/Megascans/Surfaces/Varnished_Wooden_Floor_udukafko/MI_Varnished_Wooden_Floor_udukafko_1K
+MRUItem5=/Game/Assets/Aziz/Assets/SM_WallTile3
+MRUItem6=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem7=/Game/Assets/Tashan/stairs_wallpaper_2
+MRUItem8=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
+MRUItem9=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend
+MRUItem10=/Game/Assets/Tashan/stairs_wallpaper
+MRUItem11=/Game/Assets/Tashan/mm_master
+MRUItem12=/Game/M4/Tashan/Assets/MF_Wallpaper
+MRUItem13=/Game/M4/Tashan/Assets/mat_blend
+MRUItem14=/Game/M4/Tashan/Assets/stairs_wallpaper
+MRUItem15=/Game/Assets/Tashan/Decals/mm_decal_leak1_2
+MRUItem16=/Game/Assets/Tashan/Decals/mm_decal_leak1
+MRUItem17=/Game/Assets/Tashan/Decals/mm_decal
+MRUItem18=/Game/Assets/Tashan/Decals/mm_decal_splash2
+MRUItem19=/Game/Assets/Tashan/Decals/TexturePlane_DefaultMaterial_Normal
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
@@ -2487,6 +2487,7 @@ None=======
 /Game/Assets/Aziz/Assets/SM_WallTile3.SM_WallTile3=1
 /Game/Megascans/Surfaces/Varnished_Wooden_Floor_udukafko/MI_Varnished_Wooden_Floor_udukafko_1K.MI_Varnished_Wooden_Floor_udukafko_1K=1
 /Game/Assets/Aziz/Assets/SM_TopSegment.SM_TopSegment=1
+/Game/Assets/Aziz/Assets/SM_RoofSupport.SM_RoofSupport=1
 
 [MaterialEditor]
 PrimType=1
