--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -2232,6 +2232,7 @@ WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,W
 TriggerVolume=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_LargePots.SM_LargePots;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_Yggdrasil.SM_Yggdrasil;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_RoofSupport.SM_RoofSupport;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
@@ -2251,7 +2252,6 @@ RecentlyPlaced=/Game/M4/Tashan/Assets/mat_blend.mat_blend;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/DoorWay/ArchDoorFrameLarge.ArchDoorFrameLarge;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Floral_Hardcover_Book_vf5kfemjw/S_Floral_Hardcover_Book_vf5kfemjw_lod3_Var1.S_Floral_Hardcover_Book_vf5kfemjw_lod3_Var1;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Blue_Book_vf0magphw/S_Old_Blue_Book_vf0magphw_lod3_Var1.S_Old_Blue_Book_vf0magphw_lod3_Var1;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Damaged_Book_vf1fddhiw/S_Old_Damaged_Book_vf1fddhiw_lod3_Var1.S_Old_Damaged_Book_vf1fddhiw_lod3_Var1;
 None=======
 
 [FBX_Import_UI_Option_FbxImportUI]
