--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -103,7 +103,7 @@ LastLevel=/Game/Living_Room
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
 WorldPartitionRuntimeHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 FbxImportUI="\"Object\" "
 PreviewMaterial="\"Object\" "
 Material="\"Object\" "
@@ -2370,26 +2370,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Aziz/Assets/SM_RoofSupport
-MRUItem1=/Game/Assets/Aziz/Assets/Bookshelf/Books_low_LowPoly3_OcclusionRoughnessMetallic
-MRUItem2=/Game/Living_Room
-MRUItem3=/Game/Assets/Aziz/Assets/SM_TopSegment
-MRUItem4=/Game/Megascans/Surfaces/Varnished_Wooden_Floor_udukafko/MI_Varnished_Wooden_Floor_udukafko_1K
-MRUItem5=/Game/Assets/Aziz/Assets/SM_WallTile3
-MRUItem6=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem7=/Game/Assets/Tashan/stairs_wallpaper_2
-MRUItem8=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
-MRUItem9=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend
-MRUItem10=/Game/Assets/Tashan/stairs_wallpaper
-MRUItem11=/Game/Assets/Tashan/mm_master
-MRUItem12=/Game/M4/Tashan/Assets/MF_Wallpaper
-MRUItem13=/Game/M4/Tashan/Assets/mat_blend
-MRUItem14=/Game/M4/Tashan/Assets/stairs_wallpaper
-MRUItem15=/Game/Assets/Tashan/Decals/mm_decal_leak1_2
-MRUItem16=/Game/Assets/Tashan/Decals/mm_decal_leak1
-MRUItem17=/Game/Assets/Tashan/Decals/mm_decal
-MRUItem18=/Game/Assets/Tashan/Decals/mm_decal_splash2
-MRUItem19=/Game/Assets/Tashan/Decals/TexturePlane_DefaultMaterial_Normal
+MRUItem0=/Game/Assets/Aziz/Assets/SM_WindowFrame
+MRUItem1=/Game/Assets/Aziz/Assets/SM_RoofSupport
+MRUItem2=/Game/Assets/Aziz/Assets/Bookshelf/Books_low_LowPoly3_OcclusionRoughnessMetallic
+MRUItem3=/Game/Living_Room
+MRUItem4=/Game/Assets/Aziz/Assets/SM_TopSegment
+MRUItem5=/Game/Megascans/Surfaces/Varnished_Wooden_Floor_udukafko/MI_Varnished_Wooden_Floor_udukafko_1K
+MRUItem6=/Game/Assets/Aziz/Assets/SM_WallTile3
+MRUItem7=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem8=/Game/Assets/Tashan/stairs_wallpaper_2
+MRUItem9=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
+MRUItem10=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend
+MRUItem11=/Game/Assets/Tashan/stairs_wallpaper
+MRUItem12=/Game/Assets/Tashan/mm_master
+MRUItem13=/Game/M4/Tashan/Assets/MF_Wallpaper
+MRUItem14=/Game/M4/Tashan/Assets/mat_blend
+MRUItem15=/Game/M4/Tashan/Assets/stairs_wallpaper
+MRUItem16=/Game/Assets/Tashan/Decals/mm_decal_leak1_2
+MRUItem17=/Game/Assets/Tashan/Decals/mm_decal_leak1
+MRUItem18=/Game/Assets/Tashan/Decals/mm_decal
+MRUItem19=/Game/Assets/Tashan/Decals/mm_decal_splash2
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
@@ -2488,6 +2488,7 @@ None=======
 /Game/Megascans/Surfaces/Varnished_Wooden_Floor_udukafko/MI_Varnished_Wooden_Floor_udukafko_1K.MI_Varnished_Wooden_Floor_udukafko_1K=1
 /Game/Assets/Aziz/Assets/SM_TopSegment.SM_TopSegment=1
 /Game/Assets/Aziz/Assets/SM_RoofSupport.SM_RoofSupport=1
+/Game/Assets/Aziz/Assets/SM_WindowFrame.SM_WindowFrame=1
 
 [MaterialEditor]
 PrimType=1
