--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -378,7 +378,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Assets/Aziz
+ContentBrowserDrawer.SelectedPaths=/Game/Assets/Aziz/Assets
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -2226,12 +2226,13 @@ WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedI
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.File Path,
 PostProcessVolume=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 BrushComponent=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens
-StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens
+StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails,
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails,
 TriggerVolume=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_Skirting.SM_Skirting;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Wooden_Sculpture_vejhfcdaw/S_Wooden_Sculpture_vejhfcdaw_lod5.S_Wooden_Sculpture_vejhfcdaw_lod5;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_GunFrame.SM_GunFrame;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_LargePots.SM_LargePots;
@@ -2251,7 +2252,6 @@ RecentlyPlaced=/Game/Assets/Tashan/M4/mast_wood.mast_wood;
 RecentlyPlaced=/Game/Assets/Tashan/stairs/stairs.stairs;
 RecentlyPlaced=/Game/M4/Tashan/Assets/stairs_wallpaper.stairs_wallpaper;
 RecentlyPlaced=/Game/M4/Tashan/Assets/mat_blend.mat_blend;
-RecentlyPlaced=/Game/Assets/Aziz/Assets/DoorWay/ArchDoorFrameLarge.ArchDoorFrameLarge;
 None=======
 
 [FBX_Import_UI_Option_FbxImportUI]
