--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -103,7 +103,7 @@ LastLevel=/Game/Living_Room
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
 WorldPartitionRuntimeHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 FbxImportUI="\"Object\" "
 PreviewMaterial="\"Object\" "
 Material="\"Object\" "
@@ -2232,6 +2232,7 @@ WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,W
 TriggerVolume=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_WallTile4.SM_WallTile4;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_Skirting.SM_Skirting;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Wooden_Sculpture_vejhfcdaw/S_Wooden_Sculpture_vejhfcdaw_lod5.S_Wooden_Sculpture_vejhfcdaw_lod5;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_GunFrame.SM_GunFrame;
@@ -2251,7 +2252,6 @@ RecentlyPlaced=/Game/Assets/Tashan/stairs_wallpaper.stairs_wallpaper;
 RecentlyPlaced=/Game/Assets/Tashan/M4/mast_wood.mast_wood;
 RecentlyPlaced=/Game/Assets/Tashan/stairs/stairs.stairs;
 RecentlyPlaced=/Game/M4/Tashan/Assets/stairs_wallpaper.stairs_wallpaper;
-RecentlyPlaced=/Game/M4/Tashan/Assets/mat_blend.mat_blend;
 None=======
 
 [FBX_Import_UI_Option_FbxImportUI]
@@ -2370,26 +2370,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Living_Room
-MRUItem1=/Game/Assets/Aziz/Assets/SM_WindowFrame
-MRUItem2=/Game/Assets/Aziz/Assets/SM_RoofSupport
-MRUItem3=/Game/Assets/Aziz/Assets/Bookshelf/Books_low_LowPoly3_OcclusionRoughnessMetallic
-MRUItem4=/Game/Assets/Aziz/Assets/SM_TopSegment
-MRUItem5=/Game/Megascans/Surfaces/Varnished_Wooden_Floor_udukafko/MI_Varnished_Wooden_Floor_udukafko_1K
-MRUItem6=/Game/Assets/Aziz/Assets/SM_WallTile3
-MRUItem7=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem8=/Game/Assets/Tashan/stairs_wallpaper_2
-MRUItem9=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
-MRUItem10=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend
-MRUItem11=/Game/Assets/Tashan/stairs_wallpaper
-MRUItem12=/Game/Assets/Tashan/mm_master
-MRUItem13=/Game/M4/Tashan/Assets/MF_Wallpaper
-MRUItem14=/Game/M4/Tashan/Assets/mat_blend
-MRUItem15=/Game/M4/Tashan/Assets/stairs_wallpaper
-MRUItem16=/Game/Assets/Tashan/Decals/mm_decal_leak1_2
-MRUItem17=/Game/Assets/Tashan/Decals/mm_decal_leak1
-MRUItem18=/Game/Assets/Tashan/Decals/mm_decal
-MRUItem19=/Game/Assets/Tashan/Decals/mm_decal_splash2
+MRUItem0=/Game/Assets/Aziz/Assets/SM_WallTile4
+MRUItem1=/Game/Living_Room
+MRUItem2=/Game/Assets/Aziz/Assets/SM_WindowFrame
+MRUItem3=/Game/Assets/Aziz/Assets/SM_RoofSupport
+MRUItem4=/Game/Assets/Aziz/Assets/Bookshelf/Books_low_LowPoly3_OcclusionRoughnessMetallic
+MRUItem5=/Game/Assets/Aziz/Assets/SM_TopSegment
+MRUItem6=/Game/Megascans/Surfaces/Varnished_Wooden_Floor_udukafko/MI_Varnished_Wooden_Floor_udukafko_1K
+MRUItem7=/Game/Assets/Aziz/Assets/SM_WallTile3
+MRUItem8=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem9=/Game/Assets/Tashan/stairs_wallpaper_2
+MRUItem10=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
+MRUItem11=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend
+MRUItem12=/Game/Assets/Tashan/stairs_wallpaper
+MRUItem13=/Game/Assets/Tashan/mm_master
+MRUItem14=/Game/M4/Tashan/Assets/MF_Wallpaper
+MRUItem15=/Game/M4/Tashan/Assets/mat_blend
+MRUItem16=/Game/M4/Tashan/Assets/stairs_wallpaper
+MRUItem17=/Game/Assets/Tashan/Decals/mm_decal_leak1_2
+MRUItem18=/Game/Assets/Tashan/Decals/mm_decal_leak1
+MRUItem19=/Game/Assets/Tashan/Decals/mm_decal
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
@@ -2489,6 +2489,7 @@ None=======
 /Game/Assets/Aziz/Assets/SM_TopSegment.SM_TopSegment=1
 /Game/Assets/Aziz/Assets/SM_RoofSupport.SM_RoofSupport=1
 /Game/Assets/Aziz/Assets/SM_WindowFrame.SM_WindowFrame=1
+/Game/Assets/Aziz/Assets/SM_WallTile4.SM_WallTile4=1
 
 [MaterialEditor]
 PrimType=1
