--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -276,7 +276,7 @@ MaterialFunction="\"Object\" "
 MaterialFunctionInterface="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1080,7 +1080,7 @@ UNR=../../../../../../Game Projects/Morrigan Hall Github/MorriganHall/MorriganHa
 BRUSH=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
 FBX=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
 FBXAnim=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
-GenericImport=../../../../../../Game Projects/Morrigan Hall/Assets/SM_GunFrame.fbx
+GenericImport=../../../../../../Game Projects/Morrigan Hall/Assets/SM_WallTile4.fbx
 GenericExport=C:/Users/igfxd/OneDrive/Documents/Unreal Projects/TheDepthOfWinter/Content
 GenericOpen=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
 GenericSave=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
