--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -98,28 +98,20 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [EditorStartup]
-<<<<<<< Updated upstream
 LastLevel=/Game/Living_Room
-=======
-<<<<<<< HEAD
 LastLevel=/Game/abandonedroom_Migration
-=======
-LastLevel=/Game/Living_Room
->>>>>>> 0d999ace6d6a6720600fe1235047223175a9b661
->>>>>>> Stashed changes
+LastLevel=/Game/stairwell
+None=======
+None=======
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
 WorldPartitionRuntimeHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
-<<<<<<< Updated upstream
 Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
-=======
-<<<<<<< HEAD
 Object="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
-=======
-Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
->>>>>>> 0d999ace6d6a6720600fe1235047223175a9b661
->>>>>>> Stashed changes
+Object="\"Object\" "
+None=======
+None=======
 FbxImportUI="\"Object\" "
 PreviewMaterial="\"Object\" "
 Material="\"Object\" "
@@ -363,21 +355,9 @@ GridEnabled=False
 CurrentPosGridSize=1
 
 [MRU]
-<<<<<<< Updated upstream
-MRUItem0=/Game/Living_Room
-MRUItem1=/Game/Stairwell
+MRUItem0=/Game/Stairwell
+MRUItem1=/Game/Living_Room
 MRUItem2=/Game/abandonedroom_Migration
-=======
-<<<<<<< HEAD
-MRUItem0=/Game/abandonedroom_Migration
-MRUItem1=/Game/Stairwell
-MRUItem2=/Game/Living_Room
-=======
-MRUItem0=/Game/Living_Room
-MRUItem1=/Game/Stairwell
-MRUItem2=/Game/abandonedroom_Migration
->>>>>>> 0d999ace6d6a6720600fe1235047223175a9b661
->>>>>>> Stashed changes
 MRUItem3=/Game/attic_migration
 
 [ContentBrowser]
@@ -1111,17 +1091,13 @@ UVLayoutPreviewProperties.Preview UV Layout=True
 
 [RootWindow]
 ScreenPosition=X=484.000 Y=296.000
-ScreenPosition=X=484.000 Y=282.000
+ScreenPosition=X=484.000 Y=281.600
 WindowSize=X=1290.000 Y=730.000
-<<<<<<< Updated upstream
 WindowSize=X=1304.000 Y=744.000
-=======
-<<<<<<< HEAD
 WindowSize=X=1309.600 Y=749.600
-=======
-WindowSize=X=1304.000 Y=744.000
->>>>>>> 0d999ace6d6a6720600fe1235047223175a9b661
->>>>>>> Stashed changes
+WindowSize=X=1305.600 Y=745.600
+None=======
+None=======
 None=======
 StaticMesh.LevelOfDetail=True
 Door_Group_SM_Door_04_low_Blueprint_C.Networking=True
@@ -1142,7 +1118,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Game Projects/Morrigan Hall Github/MorriganHall/MorriganHall/Content
+UNR=D:/UNIGITHUB/MorriganHall/MorriganHall/Content
 BRUSH=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
 FBX=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
 FBXAnim=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
@@ -2176,8 +2152,8 @@ NewLevelDialog.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=E:/Program Files/Unreal Engine/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=E:/Program Files/Unreal Engine/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE5/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [/Script/UnrealEd.MaterialEditorOptions]
@@ -2294,16 +2270,18 @@ PostProcessVolume=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.
 BrushComponent=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens
 StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails,
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails,
 TriggerVolume=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 
 [PlacementMode]
-<<<<<<< Updated upstream
-=======
-<<<<<<< HEAD
+None=======
+None=======
+None=======
+None=======
+None=======
+None=======
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-=======
->>>>>>> Stashed changes
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_WallTile4.SM_WallTile4;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_Skirting.SM_Skirting;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Wooden_Sculpture_vejhfcdaw/S_Wooden_Sculpture_vejhfcdaw_lod5.S_Wooden_Sculpture_vejhfcdaw_lod5;
@@ -2318,36 +2296,10 @@ RecentlyPlaced=/Game/Megascans/Surfaces/Varnished_Wooden_Floor_udukafko/MI_Varni
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_WallTile3.SM_WallTile3;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_TopSegment.SM_TopSegment;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_WindowTile.SM_WindowTile;
-<<<<<<< Updated upstream
-=======
->>>>>>> 0d999ace6d6a6720600fe1235047223175a9b661
->>>>>>> Stashed changes
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Assets/Tashan/stairs_wallpaper_2.stairs_wallpaper_2;
 RecentlyPlaced=/Game/Assets/Tashan/stairs_wallpaper.stairs_wallpaper;
 RecentlyPlaced=/Game/Assets/Tashan/M4/mast_wood.mast_wood;
 RecentlyPlaced=/Game/Assets/Tashan/stairs/stairs.stairs;
-RecentlyPlaced=/Game/M4/Tashan/Assets/stairs_wallpaper.stairs_wallpaper;
-<<<<<<< Updated upstream
-=======
-<<<<<<< HEAD
-RecentlyPlaced=/Game/M4/Tashan/Assets/mat_blend.mat_blend;
-RecentlyPlaced=/Game/Assets/Aziz/Assets/DoorWay/ArchDoorFrameLarge.ArchDoorFrameLarge;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Floral_Hardcover_Book_vf5kfemjw/S_Floral_Hardcover_Book_vf5kfemjw_lod3_Var1.S_Floral_Hardcover_Book_vf5kfemjw_lod3_Var1;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Blue_Book_vf0magphw/S_Old_Blue_Book_vf0magphw_lod3_Var1.S_Old_Blue_Book_vf0magphw_lod3_Var1;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Damaged_Book_vf1fddhiw/S_Old_Damaged_Book_vf1fddhiw_lod3_Var1.S_Old_Damaged_Book_vf1fddhiw_lod3_Var1;
-RecentlyPlaced=/Game/Assets/Aziz/Assets/FlowerLamp/FlowerLamp_low.FlowerLamp_low;
-RecentlyPlaced=/Game/Assets/Tashan/Decals/mm_decal_splash.mm_decal_splash;
-RecentlyPlaced=/Game/Assets/Tashan/Decals/mm_decal_leak1_2.mm_decal_leak1_2;
-RecentlyPlaced=/Game/Assets/Tashan/Decals/mm_decal_leak1.mm_decal_leak1;
-RecentlyPlaced=/Game/Assets/Tashan/Decals/mat_decal.mat_decal;
-RecentlyPlaced=/Game/Megascans/Decals/Damaged_Plaster_Patch_vdekajsfw/MI_Damaged_Plaster_Patch_vdekajsfw_2K.MI_Damaged_Plaster_Patch_vdekajsfw_2K;
-RecentlyPlaced=/Game/M4/Tashan/Assets/mat_decal.mat_decal;
-RecentlyPlaced=/Game/Assets/Aziz/Assets/floral-seamless-pattern-flower-background-floral-seamless-texture-with-flowers-flourish-tiled-white-spring-wallpaper-vector.floral-seamless-pattern-flower-background-floral-seamless-texture-with-flowers-flourish-tiled-white-spring-wallpaper-vector;
-=======
->>>>>>> 0d999ace6d6a6720600fe1235047223175a9b661
->>>>>>> Stashed changes
-None=======
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
