--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -100,7 +100,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 [EditorStartup]
 LastLevel=/Game/Living_Room
 LastLevel=/Game/abandonedroom_Migration
-LastLevel=/Game/stairwell
+LastLevel=/Game/Assets/Amy/test
 None=======
 None=======
 
@@ -293,7 +293,7 @@ ParameterizeMeshToolPatchBuilderGroupLayerProperties="\"Object\" "
 PolygroupLayersProperties="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -355,10 +355,11 @@ GridEnabled=False
 CurrentPosGridSize=1
 
 [MRU]
-MRUItem0=/Game/Stairwell
-MRUItem1=/Game/Living_Room
-MRUItem2=/Game/abandonedroom_Migration
-MRUItem3=/Game/attic_migration
+MRUItem0=/Game/Assets/Amy/test
+MRUItem1=/Game/Stairwell
+MRUItem2=/Game/Living_Room
+MRUItem3=/Game/abandonedroom_Migration
+MRUItem4=/Game/attic_migration
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Megascans/3D_Assets/Wooden_Sculpture_vejhfcdaw
@@ -395,7 +396,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Assets/Aziz/Assets
+ContentBrowserDrawer.SelectedPaths=/Game/Assets/Amy
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -2417,26 +2418,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Aziz/Assets/SM_WallTile4
-MRUItem1=/Game/Living_Room
-MRUItem2=/Game/Assets/Aziz/Assets/SM_WindowFrame
-MRUItem3=/Game/Assets/Aziz/Assets/SM_RoofSupport
-MRUItem4=/Game/Assets/Aziz/Assets/Bookshelf/Books_low_LowPoly3_OcclusionRoughnessMetallic
-MRUItem5=/Game/Assets/Aziz/Assets/SM_TopSegment
-MRUItem6=/Game/Megascans/Surfaces/Varnished_Wooden_Floor_udukafko/MI_Varnished_Wooden_Floor_udukafko_1K
-MRUItem7=/Game/Assets/Aziz/Assets/SM_WallTile3
-MRUItem8=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem9=/Game/Assets/Tashan/stairs_wallpaper_2
-MRUItem10=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
-MRUItem11=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend
-MRUItem12=/Game/Assets/Tashan/stairs_wallpaper
-MRUItem13=/Game/Assets/Tashan/mm_master
-MRUItem14=/Game/M4/Tashan/Assets/MF_Wallpaper
-MRUItem15=/Game/M4/Tashan/Assets/mat_blend
-MRUItem16=/Game/M4/Tashan/Assets/stairs_wallpaper
-MRUItem17=/Game/Assets/Tashan/Decals/mm_decal_leak1_2
-MRUItem18=/Game/Assets/Tashan/Decals/mm_decal_leak1
-MRUItem19=/Game/Assets/Tashan/Decals/mm_decal
+MRUItem0=/Game/Assets/Amy/test
+MRUItem1=/Game/Assets/Aziz/Assets/SM_WallTile4
+MRUItem2=/Game/Living_Room
+MRUItem3=/Game/Assets/Aziz/Assets/SM_WindowFrame
+MRUItem4=/Game/Assets/Aziz/Assets/SM_RoofSupport
+MRUItem5=/Game/Assets/Aziz/Assets/Bookshelf/Books_low_LowPoly3_OcclusionRoughnessMetallic
+MRUItem6=/Game/Assets/Aziz/Assets/SM_TopSegment
+MRUItem7=/Game/Megascans/Surfaces/Varnished_Wooden_Floor_udukafko/MI_Varnished_Wooden_Floor_udukafko_1K
+MRUItem8=/Game/Assets/Aziz/Assets/SM_WallTile3
+MRUItem9=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem10=/Game/Assets/Tashan/stairs_wallpaper_2
+MRUItem11=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
+MRUItem12=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend
+MRUItem13=/Game/Assets/Tashan/stairs_wallpaper
+MRUItem14=/Game/Assets/Tashan/mm_master
+MRUItem15=/Game/M4/Tashan/Assets/MF_Wallpaper
+MRUItem16=/Game/M4/Tashan/Assets/mat_blend
+MRUItem17=/Game/M4/Tashan/Assets/stairs_wallpaper
+MRUItem18=/Game/Assets/Tashan/Decals/mm_decal_leak1_2
+MRUItem19=/Game/Assets/Tashan/Decals/mm_decal_leak1
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
